chrome bug, disable horizontal scroll

--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -19,13 +19,15 @@ body {
 pre {
   white-space: pre-wrap;
 }
+html, body{
+  max-width: 100%;
+  overflow-x: hidden;
+}
 
 body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  max-width: 100%;
-  overflow-x: hidden;
 }
 
 body > main {
